# Carrier-Owl

./: --all -v  .gitignore  LICENSE  README.md  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: cron.yml
data/: .gitignore.swp  carrier-owl.gvdesign  keywords.txt
data/.ipynb_checkpoints/: keywords-checkpoint.txt
docs/: discord_setup.md  line_setup.md  slack_setup.md  teams_setup.md
nb/: 01_beutifull_soup.ipynb  02_googletrans.ipynb  03_slack.ipynb  04_summary.ipynb  Untitled.ipynb
nb/.ipynb_checkpoints/: 01_beutifull_soup-checkpoint.ipynb  04_summary-checkpoint.ipynb  Untitled-checkpoint.ipynb  test-checkpoint.txt
src/: arxiv_notification.py  carrier-owl.py  carrier_owl.py
